<resources>
    <string name="app_name">Phase3</string>
    <string name="admin">Admin</string>
    <string name="client">Client</string>
    <string name="action_settings">Settings</string>
    <string name="user_create">Create A User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-Mail Address</string>
    <string name="address">Address</string>
    <string name="credit_number">Credit Card Number</string>
    <string name="expiry">Expiry Date</string>
    <string name="submit_text">SUBMIT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="signup_link">Don\'t have an account? Sign up!</string>
    <string name="enter">Enter</string>
    <string name="departure_date">Departure date</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="search_text">Search</string>
    <string name="date">Date ("yyyy-mm-dd")</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="title_activity_display_flights">DisplayFlights</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_search_client">SearchClientActivity</string>
    <string name="title_activity_display_client">DisplayClientActivity</string>
    <string name="title_activity_display_itineraries">DisplayItineraries</string>
    <string name="single">single</string>
    <string name="by_cost">By Cost</string>
    <string name="by_time">By Time</string>
    <string name="departure_time">Departure Time</string>
    <string name="upload_flights">Upload Flights</string>
    <string name="upload_clients">Upload Clients</string>
    <string name="book_itinerary">Book an Itinerary</string>
    <string name="search_for_flight">Search for Flights</string>
    <string name="search_for_client">Search for Client</string>
    <string name="welcome">Welcome Here Are Your</string>
    <string name="available">Available Options:</string>
    <string name="edit_info">Edit Information</string>
    <string name="view_booked_itin">View Booked Itineraries</string>
    <string name="edit_flight_info">Edit Flight Information</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="airline">Airline</string>
    <string name="cost">Cost</string>
    <string name="available_seats">Available Seats</string>
    <string name="search">Search</string>

</resources>
