<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_admin"
    tools:context=".AdminScreens.AdminActivity">

    <TextView
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#071208"
        android:layout_gravity="center" />

    <TextView
        android:text="@string/available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#071208"
        android:layout_gravity="center" />

    <Button
        android:paddingTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_for_client"
        android:onClick="searchClient"
        android:layout_gravity="center"
        android:textSize="22sp" />

    <Button
        android:paddingTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_for_flight"
        android:onClick="searchFlights"
        android:layout_gravity="center"
        android:textSize="22sp" />


    <Button
        android:paddingTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_clients"
        android:onClick="uploadClients"
        android:layout_gravity="center"
        android:textSize="22sp" />

    <Button
        android:paddingTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_flights"
        android:onClick="uploadFlights"
        android:layout_gravity="center"
        android:textSize="22sp" />

</LinearLayout>
