<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_menu"
    tools:context=".ClientScreens.MenuActivity">

    <TextView
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#071208"
        android:layout_gravity="center" />

    <TextView
        android:text="@string/available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#071208"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/client_info" />

    <Button
        android:paddingTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_itinerary"
        android:onClick="searchItineraries"
        android:layout_gravity="center"
        android:textSize="20dp" />

    <Button
        android:paddingTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_for_flight"
        android:onClick="searchFlights"
        android:layout_gravity="center"
        android:textSize="20sp" />

    <Button
        android:paddingTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_info"
        android:onClick="editInfo"
        android:layout_gravity="center"
        android:textSize="20dp" />

    <Button
        android:paddingTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_booked_itin"
        android:onClick="viewItineraries"
        android:layout_gravity="center"
        android:textSize="20dp" />

</LinearLayout>
